# stdexec

./: .gitignore  BUILD.bazel  Dockerfile.msan  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-stdexec  bazel-testlogs  bazelrc  build_clang.sh  build_msan.sh
include/exec/: any_sender_of.hpp  async_scope.hpp  env.hpp  finally.hpp  into_tuple.hpp  libdispatch_queue.hpp  repeat_effect_until.hpp  repeat_n.hpp  static_thread_pool.hpp  when_any.hpp
include/exec/linux/: io_uring_context.hpp
include/exec/sequence/: iterate.hpp
include/nvexec/detail/: memory.cuh
include/nvexec/stream/: common.cuh  sync_wait.cuh
include/stdexec/__detail/: __as_awaitable.hpp  __bulk.hpp  __config.hpp  __connect_awaitable.hpp  __into_variant.hpp  __let.hpp  __meta.hpp  __optional.hpp  __receivers.hpp  __run_loop.hpp  __schedule_from.hpp  __shared.hpp  __stopped_as_optional.hpp  __submit.hpp  __sync_wait.hpp  __when_all.hpp
include/tbbexec/: tbb_thread_pool.hpp
test/: BUILD.bazel
