package(
	default_visibility = ["//visibility:public"],
)

cc_library(
    name = "test_common",
    testonly = 1,
    srcs = ["test_main.cpp"],
    hdrs = glob(["test_common/*.hpp"]),
    includes = ["."],
    deps = [
        "//:stdexec",
        "//:exec",
        "@catch2//:catch2",
    ],
)


[cc_test(
    name = file.replace("/", "_")[:-4],
    srcs = [file],
    copts = [
        "-ftemplate-backtrace-limit=0",
        "-ferror-limit=0",
        "-fmacro-backtrace-limit=0",
    ],
    deps = [
        ":test_common",
        "//:stdexec",
        "//:exec",
        "//:exec_detail",
        "//:stdexec_detail",
        "@catch2//:catch2",
    ],
) for file in glob(
    include = ["**/*.cpp"],
    exclude = [
        "test_common/**",
        "test_main.cpp",
        "exec/test_libdispatch.cpp",
        "nvexec/**",
        "tbbexec/**",
        "stdexec/cpos/**",
    ],
)]
